# pp-task-runner-mcp

./: .gitignore  FINAL_PLAN.md  Makefile  README.md  dev_server.py  menu_server.py  pp_task_runner.py  prune_to_menu.sh  pyproject.toml  requirements.txt  server.py  simulate.py  task_config.json
.claude/commands/: pp-task-runner.md  select-skill.md
examples/: open_menu_example.py
mcp/server/: __init__.py  fastmcp.py
scripts/: README.generate_summary.md  ensure_pip.sh  generate_repo_summary.py
src/: config.py  confirm.py  deps.py  main.py  menu_mcp_server.py  server.py
src/mcp/: __init__.py
src/mcp/server/: __init__.py  fastmcp.py
src/menu_mcp/: __init__.py  constants.py  state.py  task_config.json  tools.py  web.py
src/menu_server/: __main__.py  menu_server.py
src/menu_server/menu_renderer/: __init__.py  html_builder.py  menu_renderer.py  styles.py
src/prompts/: example_prompt.py
src/resources/: example_resource.py
src/tools/: example_tool.py
tests/: conftest.py  test_menu_flow.py  test_menu_http.py  test_server.py  test_tools.py
workflow/agents/frontend/: developer.md  index.md  quality.md  reviewer.md  test.md
workflow/agents/gitlab/: authentication.md  close-issue.md  commit-and-push.md  create-branch.md  create-issue.md  index.md  merge-branch.md
workflow/memories/: claude-commands-local-setup.md  menu-ask-user-question.md  menu-file-structure.md  menu-named-handoff-blocks.md  menu-print-messages.md
workflow/menu/: index.md  task-lifecycle.md
workflow/scripts/: generate-report.js  logger.js
workflow/scripts/session/: session.js  (+1 more)
(+4 files in other folders)
