[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "my-mcp-server"
version = "0.1.0"
description = "Initial MCP server structure"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
my-mcp-server = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
